# Formato-Image-Converter

./: .gitignore  README.md  config.py  example_usage.py  installer.iss  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  utils.py
assets/: README.txt
core/: image_processor.py
formato/: __init__.py  app.py  converter.py  gui_widgets.py  run.py  utils.py
models/: queue_model.py
tests/: test_converter.py
views/: main_window.py  widgets.py
